<resources>
    <string name="app_name">Nate Academy</string>
    <string name="heroes_name">Nama Kelas</string>
    <string name="detail">Detail</string>
    <string name="about_me">About Me</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">Card View</string>
    <string name="gabung">Gabung</string>
    <string name="account">account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>

    <!--    Detail Acivity-->
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="nabil">Nabil</string>
    <string name="gbng">Gabung Kelas!</string>
    <string name="pemilik">Mentor Kelas</string>
    <string name="battery">Battery</string>
    <string name="size">Size</string>
    <string name="display">Display</string>
    <string name="stock">Stock Terbatas!</string>
    <string name="_500rb">Rp500.000</string>
    <string name="_count_photos">1 Photos</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="harga">Harga Promo</string>
    <string name="gabung_kelas_berhasil">Gabung Kelas Berhasil!</string>
    <string name="lihat_daftar_kelas">Lihat daftar kelas</string>
    <string name="keluar_aplikasi">Keluar Aplikasi</string>
    <string name="selamat_yaa">Selamat Ya</string>
</resources>