<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".GabungActivity">
<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:theme="@style/ToolbarTheme"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:titleTextColor="@color/colorWhite"-->
<!--        android:background="@color/colorPrimary"/>-->
    <ImageView
        android:id="@+id/gifsuccess"
        android:layout_marginTop="-10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/success" />
    <TextView
        android:id="@+id/success"
        android:layout_marginTop="250dp"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="false"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/gabung_kelas_berhasil"/>

    <TextView
        android:id="@+id/selamat"
        android:layout_below="@+id/success"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/luniksangat"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="false"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/selamat_yaa"/>

    <Button
        android:id="@+id/btn_set_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="450dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/lihat_daftar_kelas"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="510dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/keluar_aplikasi"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

</RelativeLayout>