<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/colorWhite"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_marginTop="56dp"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    tools:src="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextContent.Medium.White"
                    android:textSize="25sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#4D000000"
                    android:drawableLeft="@drawable/ic_book_white_40dp"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/heroes_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </FrameLayout>
            <TextView
                android:textSize="15sp"
                style="@style/TextContent.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_harga"
                style="@style/TextContent.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/_500rb"
                android:textColor="@color/colorWhite"
                android:textSize="32sp" />

            <TextView
                android:textSize="15sp"
                style="@style/TextContent.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:textSize="15sp"
                style="@style/TextContent.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/tv_detail"
                style="@style/TextContent"
                android:text="@string/detail"
                android:layout_marginBottom="16dp"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/white"/>
<!--            <TableLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_marginRight="16dp"-->
<!--                android:layout_marginBottom="16dp">-->
<!--                <TableRow-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginBottom="8dp">-->
<!--                    <TextView-->
<!--                        style="@style/TextSpec.Field"-->
<!--                        android:textSize="14sp"-->
<!--                        android:text="@string/display"/>-->
<!--                    <TextView-->
<!--                        style="@style/TextSpec.Value"-->
<!--                        android:textSize="14sp"-->
<!--                        android:text="@string/content_specs_display" />-->
<!--                </TableRow>-->
<!--                <TableRow-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginBottom="8dp">-->
<!--                    <TextView-->
<!--                        style="@style/TextSpec.Field"-->
<!--                        android:textSize="14sp"-->
<!--                        android:text="@string/size"/>-->
<!--                    <TextView-->
<!--                        style="@style/TextSpec.Value"-->
<!--                        android:textSize="14sp"-->
<!--                        android:text="@string/content_specs_size" />-->
<!--                </TableRow>-->
<!--                <TableRow-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginBottom="8dp">-->
<!--                    <TextView-->
<!--                        style="@style/TextSpec.Field"-->
<!--                        android:textSize="14sp"-->
<!--                        android:text="@string/battery"/>-->
<!--                    <TextView-->
<!--                        style="@style/TextSpec.Value"-->
<!--                        android:textSize="14sp"-->
<!--                        android:text="@string/content_specs_battery" />-->
<!--                </TableRow>-->
<!--            </TableLayout>-->
            <TextView
                android:textSize="15sp"
                style="@style/TextContent.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pemilik"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/nabil"
                    android:layout_centerVertical="true"
                    android:id="@+id/profile_image"
                    android:layout_marginRight="16dp"/>
                <TextView
                    style="@style/TextContent"
                    android:layout_toRightOf="@id/profile_image"
                    android:text="@string/nabil"
                    android:textColor="@android:color/white"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <Button
                android:background="@color/colorPrimaryDark"
                android:id="@+id/btnGabung"
                style="@style/ButtonGeneral"
                android:text="@string/gbng" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>